--- a/WebApplication3/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/WebApplication3/Views/Home/Index.cshtml
@@ -5,34 +5,44 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <div class="container">
-        <h1>Order List</h1>
-
-        <table>
-            <thead>
+        <h1>List</h1>
+        <div class="mb-3">
+            <a href="@Url.Action("Create", "ComicBooks")" class="btn btn-primary">Add New Comic Book</a>
+        </div>
+        <table class="table table-striped table-bordered">
+            <thead class="thead-dark">
             <tr>
-                <th>Order ID</th>
-                <th>User</th>
-                <th>Order Date</th>
-                <th>Details</th>
+                <th scope="col">No</th>
+                <th scope="col">Title</th>
+                <th scope="col">Author</th>
+                <th scope="col">Price Per Day</th>
+                <th scope="col">Actions</th>
             </tr>
             </thead>
             <tbody>
-            @foreach (var order in Model)
+            @if (Model != null && Model.Any())
+            {
+                int index = 1;
+                foreach (var comicBook in Model)
+                {
+                    <tr>
+                        <th scope="row">@index</th>
+                        <td>@comicBook.Title</td>
+                        <td>@comicBook.Author</td>
+                        <td>@comicBook.PricePerDay.ToString("C")</td>
+                        <td>
+                            <a href="@Url.Action("Details", "ComicBooks", new { id = comicBook.ComicBookID })" class="btn btn-info btn-sm">Details</a>
+                            <a href="@Url.Action("Edit", "ComicBooks", new { id = comicBook.ComicBookID })" class="btn btn-warning btn-sm">Edit</a>
+                            <a href="@Url.Action("Delete", "ComicBooks", new { id = comicBook.ComicBookID })" class="btn btn-danger btn-sm">Delete</a>
+                        </td>
+                    </tr>
+                    index++;
+                }
+            }
+            else
             {
                 <tr>
-                    <td>@order.Id</td>
-                    <td>@order.User.Name</td>
-                    <td>@order.OrderDate</td>
-                    <td>
-                        <ul>
-                            @foreach (var detail in order.OrderDetails)
-                            {
-                                <li>
-                                    Product: @detail.Product.Name, Quantity: @detail.Quantity, Price: @detail.UnitPrice
-                                </li>
-                            }
-                        </ul>
-                    </td>
+                    <td colspan="5" class="text-center text-muted">No comic books available.</td>
                 </tr>
             }
             </tbody>
